group = 'com.example'
version = '0.0.1-SNAPSHOT'

ext {
	springVersion = '2.1.1.RELEASE'
    springCloudVersion = 'Finchley.SR2'
	springCloudK8Version = '0.3.0.RELEASE'
	spotbugsVersion = '3.1.9'
}

buildscript {
    repositories {
        mavenCentral()
		maven { 
			url 'https://plugins.gradle.org/m2/'
		}
		maven { 
			url 'http://repo.spring.io/libs-release'  
		}
    }
	dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.1.RELEASE")
		classpath("gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.9")
    }
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
//apply plugin: 'jar'
apply plugin: "com.github.spotbugs"

bootRun {
	jvmArgs = ["-XX:MaxPermSize=256m", "-XX:+HeapDumpOnOutOfMemoryError", "-Dfile.encoding=UTF-8"]
}

repositories {
    mavenCentral()
	maven { 
		url 'https://plugins.gradle.org/m2/'
	}
	maven { 
		url 'http://repo.spring.io/libs-release'  
	}
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

dependencyManagement {
    imports {
		mavenBom "org.springframework.cloud:spring-cloud-starter-kubernetes:${springCloudK8Version}"
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {
	compile ("org.springframework.boot:spring-boot-starter-web") 
	compile ("org.springframework.boot:spring-boot-starter-actuator")
	compile("org.springframework.boot:spring-boot-configuration-processor")
	compile ("org.springframework.cloud:spring-cloud-starter-kubernetes")
	// providedRuntime ("org.springframework.boot:spring-boot-starter-tomcat")
	testCompile ("org.springframework.boot:spring-boot-starter-test")
}


bootJar {
	manifest {
		attributes 'Start-Class': 'com.example.config.SpringRestBootDockerApplication'
	}
    mainClassName 'com.example.config.SpringRestBootDockerApplication'
    baseName 'springrestbootk8'
	version '0.1.0'
	archiveName 'springrestbootk8.jar'
}

/*
bootWar {
	excludeDevtools = false
	manifest {
		attributes 'Start-Class': 'com.example.config.SpringRestBootDockerApplication'
	}
    mainClassName = 'com.example.config.SpringRestBootDockerApplication'
    baseName 'springrestbootk8'
	  version '0.1.0'
    archiveName 'springrestbootk8.war'
}
*/
bootRun {
    main = 'com.example.config.SpringRestBootDockerApplication'
    systemProperties = System.properties
}

sourceSets {
	main {
		java {
			srcDir 'src/main/java'
		}
		resources {
			srcDir 'src/main/resources'
		}
	}
	test {
		java {
			srcDir 'src/test/java'
		}
		resources {
			srcDir 'src/test/resources'
		}
	}
}

tasks.withType(Test) {
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
}
tasks.withType(JavaCompile) {
    options.fork = true
    options.incremental = true
}

task stage(dependsOn: ['build', 'clean'])
tasks.withType(com.github.spotbugs.SpotBugsTask) {
  reports.xml.enabled = false
  reports.html.enabled = true
}